--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^3.2.2",
+    "@mantine/dates": "^3.2.2",
+    "@mantine/dropzone": "^3.2.2",
+    "@mantine/hooks": "^3.2.2",
+    "@mantine/modals": "^3.2.2",
+    "@mantine/notifications": "^3.2.2",
+    "@radix-ui/react-icons": "^1.0.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +17,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@visx/curve": "^2.1.0",
+    "@visx/legend": "^2.2.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/xychart": "^2.5.0",
+    "dayjs": "^1.10.7",
+    "linear-solve": "^1.2.1",
+    "mathjs": "^10.0.0",
+    "mobx": "^6.3.7",
+    "mobx-react-lite": "^3.2.2",
+    "numjs": "^0.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -39,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/numjs": "^0.16.1"
   }
 }
