--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "numjs": "^0.16.1",
+    "plotly.js": "^2.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.2",
